--- a/rocon_android_robot_remoticon/res/values/strings.xml
+++ b/rocon_android_robot_remoticon/res/values/strings.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">RoconAndroidRobotRemoticon</string>
+
+    <string name="app_name">RobotRemoticon</string>
+    <string name="stop_app">Kill</string>
+    <string name="default_robot">turtlebot</string>
+
 </resources>
