--- a/rocon_android_connector/res/values/strings.xml
+++ b/rocon_android_connector/res/values/strings.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Rocon Connector</string>
+    <string name="ReleaseDate">2013-05-03</string>
+    <string name="Version">1.0</string>
 </resources>
