dont relaunch the app, better exit string.

--- a/robot_remocon/src/main/res/values/strings.xml
+++ b/robot_remocon/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Robot Remoticon</string>
-    <string name="stop_app">Kill</string>
+    <string name="app_name">Robot Remocon</string>
+    <string name="exit">Exit</string>
     <string name="default_robot">turtlebot</string>
 
 </resources>
