--- a/concert_remocon/src/main/res/values/strings.xml
+++ b/concert_remocon/src/main/res/values/strings.xml
@@ -3,5 +3,7 @@
 
     <string name="app_name">Concert Remocon</string>
     <string name="exit">Exit</string>
+    <string name="change_role">Change Role</string>
+    <string name="leave_concert">Leave Concert</string>
 
 </resources>
