--- a/rocon_nfc_writer/src/main/res/values/strings.xml
+++ b/rocon_nfc_writer/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">rocon_nfc_writer</string>
+    <string name="app_name">Rocon NFC tags writer</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
 
