headless_launcher: work in progress. A lot to still

--- a/headless_launcher/src/main/res/values/strings.xml
+++ b/headless_launcher/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">HeadlessLauncher</string>
+    <string name="app_name">Headless app launcher</string>
 </resources>
