--- a/rocon_nfc_writer/src/main/res/values/strings.xml
+++ b/rocon_nfc_writer/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
 
     <string name="app_name">Rocon NFC tags writer</string>
     <string name="action_settings">Settings</string>
+    <string name="app_record_label">App record :\n(56 chars)</string>
 
 </resources>
