--- a/listener/src/main/res/values/strings.xml
+++ b/listener/src/main/res/values/strings.xml
@@ -3,7 +3,8 @@
     <!-- Application Management -->
     <string name="app_name">Listener</string>
     <string name="paired_app_name">rocon_apps/talker</string>
-    <string name="default_robot">rocon</string>
+    <!-- <string name="default_robot">rocon</string>-->
+    <string name="default_robot">cybernetic_pirate</string>
 
     <!-- Menu options -->
     <string name="stop_app">Stop Application</string>
